# cdb-synthetic-data-generator

./: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  test_output.sql
docs/: GENERATED_DATA_CORRECTNESS.md  PIPELINE_FLOW.md
examples/: README.md  enum_schema.sql  enum_seed.sql  enum_srs.txt  shopflow_schema_50_tables_postgres.sql  shopflow_schema_mongo.json  shopflow_schema_mysql.sql  shopflow_schema_sqlserver.sql  shopflow_srs_short.txt
logs/: srs_extract.json
scripts/: generate_all_examples.py  generate_example_pdf.py
src/synthetic_seeder/: __init__.py  cli.py  config.py
src/synthetic_seeder/ai_layer/: __init__.py  alignment_agent.py  schema_agent.py  seed_plan_agent.py  semantic_gen.py  srs_agent.py  srs_merge.py  srs_schemas.py  table_context_agent.py  table_data_agent.py
src/synthetic_seeder/context/: __init__.py  srs_profile.py  table_context_md.py
src/synthetic_seeder/generator/: __init__.py  coverage.py  engine.py  plan_models.py  value_gen.py
src/synthetic_seeder/graph/: builder.py  model.py
src/synthetic_seeder/normalizer/: __init__.py  compatibility.py  normalizer.py
src/synthetic_seeder/pipeline/: __init__.py  orchestrator.py
src/synthetic_seeder/schema/: __init__.py  models.py
src/synthetic_seeder/schema_parser/: __init__.py  detector.py  mongo_parser.py  mysql_parser.py  postgres_parser.py  sql_common.py  sql_dialect.py  sql_parser.py  sqlserver_parser.py
src/synthetic_seeder/text_layer/: __init__.py  cleaner.py  pdf_loader.py
web/: README.md
web/api/: main.py
web/static/: index.html
(+5 files in other folders)
